--- a/palindrome/HW_palindrome.ipynb
+++ b/palindrome/HW_palindrome.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,14 +50,30 @@
     "    # write your code here\n",
     "    # be sure to include a `return` statement so that\n",
     "    # your function returns the appropriate object.\n",
-    "    pass"
+    "    x = x.replace(\" \", \"\")\n",
+    "    x = x.lower()\n",
+    "    return x == x[::-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================== ALL TESTS PASSED! ===============================\n",
+      "Your submission code: bw5a137af434b22dce4b6c174e3de60dfdd65f7d05ed3b68f4359e8e6f\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Execute this cell to grade your work\n",
     "from bwsi_grader.python.palindrome import grader\n",
@@ -67,21 +83,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.2"
   }
  },
  "nbformat": 4,
