--- a/three_five/HW_three_five_threefive.ipynb
+++ b/three_five/HW_three_five_threefive.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,14 +57,32 @@
     "    # write your code here\n",
     "    # be sure to include a `return` statement so that\n",
     "    # your function returns the appropriate object.\n",
+    "    result = \"\"\n",
+    "    if x % 3 == 0:\n",
+    "        result += \"three\"\n",
+    "    if x % 5 == 0:\n",
+    "        result += \"five\"\n",
+    "    return result if result else x\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================== ALL TESTS PASSED! ===============================\n",
+      "Your submission code: bwff4421ee931894837852f09fd7693233692ddaf5b61d75c9433691bf\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Execute this cell to grade your work\n",
     "from bwsi_grader.python.three_five import grader\n",
@@ -74,21 +92,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.2"
   }
  },
  "nbformat": 4,
