--- a/pizza_shop/HW_pizza_shop.ipynb
+++ b/pizza_shop/HW_pizza_shop.ipynb
@@ -99,24 +99,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make sure to execute this cell so that your function is defined\n",
-    "# you must re-run this cell any time you make a change to this function\n",
+    "from typing import Callable, List, Optional\n",
     "\n",
-    "def cost_calculator():\n",
-    "    # write your code here\n",
-    "    # be sure to include a `return` statement so that\n",
-    "    # your function returns the appropriate object.\n"
+    "def cost_calculator(\n",
+    "        *pizzas: List[str],\n",
+    "        drinks: Optional[List[str]] = None,\n",
+    "        wings: Optional[List[int]] = None,\n",
+    "        coupon: Optional[float] = None,\n",
+    "    ) -> float:\n",
+    "    \n",
+    "    p_price = 13.0\n",
+    "    t_price = {'pepperoni': 1.0, 'mushroom': 0.5, 'olive': 0.5, 'anchovy': 2.0, 'ham': 1.5}\n",
+    "    d_price = {'small': 2.0, 'medium': 3.0, 'large': 3.5, 'tub': 3.75}\n",
+    "    w_price = {10: 5.0, 20: 9.0, 40: 17.5, 100: 48.0}\n",
+    "\n",
+    "    cost = p_price * len(pizzas)\n",
+    "    for pizza in pizzas:\n",
+    "        for topping in pizza:\n",
+    "            cost += t_price[topping]\n",
+    "\n",
+    "    if drinks:\n",
+    "        cost += sum(d_price[drink] for drink in drinks)\n",
+    "\n",
+    "    if wings:\n",
+    "        cost += sum(w_price[wing] for wing in wings)\n",
+    "\n",
+    "    discount = cost * coupon if coupon is not None else 0.0\n",
+    "    cost += cost * 0.0625\n",
+    "    cost -= discount\n",
+    "\n",
+    "    return round(cost, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================== ALL TESTS PASSED! ===============================\n",
+      "Your submission code: bw376a5897c31ca763c949f9e3e3b48926ae5e8e0dfb0210f3f59d4485\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Execute this cell to grade your work\n",
     "from bwsi_grader.python.pizza_shop import grader\n",
@@ -126,7 +161,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -140,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
