--- a/run_length_encoding/HW_run_length_encoding.ipynb
+++ b/run_length_encoding/HW_run_length_encoding.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,66 +44,50 @@
     "# you must re-run this cell any time you make a change to this function\n",
     "\n",
     "def run_length_encoder(in_string):\n",
-    "    # write your code here\n",
-    "    # be sure to include a `return` statement so that\n",
-    "    # your function returns the appropriate object."
+    "    char = list(in_string)\n",
+    "    result = []\n",
+    "    i = 0\n",
+    "    while i < len(char):\n",
+    "        count = 1\n",
+    "        result.append(char[i])\n",
+    "        while i + 1 < len(char) and char[i] == char[i + 1]:\n",
+    "            i += 1\n",
+    "            count += 1\n",
+    "        if count > 1:\n",
+    "            result.extend((char[i], count))\n",
+    "        i += 1\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================== ALL TESTS PASSED! ===============================\n",
+      "Your submission code: bw42a5d76dd6ae8182436ab2f9860e8c0feb30dc65224efba85b04727c\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Execute this cell to grade your work\n",
     "from bwsi_grader.python.run_length_encoding import encoder_grader\n",
     "encoder_grader(run_length_encoder)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make sure to execute this cell so that your function is defined\n",
-    "# you must re-run this cell any time you make a change to this function\n",
-    "\n",
-    "def run_length_decoder(in_list):\n",
-    "    # write your code here\n",
-    "    # be sure to include a `return` statement so that\n",
-    "    # your function returns the appropriate object."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Execute this cell to grade your work\n",
-    "from bwsi_grader.python.run_length_encoding import decoder_grader\n",
-    "decoder_grader(run_length_decoder)"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.2"
   }
  },
  "nbformat": 4,
