--- a/run_length_encoding/HW_run_length_encoding.ipynb
+++ b/run_length_encoding/HW_run_length_encoding.ipynb
@@ -36,12 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# make sure to execute this cell so that your function is defined\n",
     "# you must re-run this cell any time you make a change to this function\n",
+    "\n",
+    "import string\n",
+    "\n",
     "\n",
     "def run_length_encoder(in_string):\n",
     "    char = list(in_string)\n",
@@ -56,12 +59,25 @@
     "        if count > 1:\n",
     "            result.extend((char[i], count))\n",
     "        i += 1\n",
-    "    return result"
+    "    return result\n",
+    "\n",
+    "def run_length_decoder(in_char):\n",
+    "    result = \"\"\n",
+    "    i = 0\n",
+    "    while i < len(in_char):\n",
+    "        if isinstance(in_char[i], int):\n",
+    "            char = in_char[i - 1]\n",
+    "            assert isinstance(char, str)\n",
+    "            result += char * (in_char[i] - 2)\n",
+    "        else:\n",
+    "            result += in_char[i]\n",
+    "        i += 1\n",
+    "    return result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -72,14 +88,20 @@
       "============================== ALL TESTS PASSED! ===============================\n",
       "Your submission code: bw42a5d76dd6ae8182436ab2f9860e8c0feb30dc65224efba85b04727c\n",
       "================================================================================\n",
+      "\n",
+      "\n",
+      "============================== ALL TESTS PASSED! ===============================\n",
+      "Your submission code: bwdd9e7c7dc76cd758ee821609e7e7ba4b123ff6786f39ab306e3939e7\n",
+      "================================================================================\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Execute this cell to grade your work\n",
-    "from bwsi_grader.python.run_length_encoding import encoder_grader\n",
-    "encoder_grader(run_length_encoder)"
+    "from bwsi_grader.python.run_length_encoding import encoder_grader, decoder_grader\n",
+    "encoder_grader(run_length_encoder)\n",
+    "decoder_grader(run_length_decoder)"
    ]
   }
  ],
@@ -88,6 +110,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
