--- a/relaxation_method/HW_relaxation_method.ipynb
+++ b/relaxation_method/HW_relaxation_method.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,15 +129,35 @@
     "        List[float]\n",
     "            A list of the initial guess, and all of the subsequent guesses generated\n",
     "            by the relaxation method. \"\"\"\n",
-    "    # student code goes here\n",
+    "    \n",
+    "    euler = [xo]\n",
+    "    for i in range(num_it):\n",
+    "        x = func(xo)\n",
+    "        euler.append(x)\n",
+    "        xo = x\n",
+    "    return euler\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding fixed-points for the function: f(x) = x**2\n",
+      "Finding fixed-points for the function: f(x) = tanh(4*x)\n",
+      "\n",
+      "============================== ALL TESTS PASSED! ===============================\n",
+      "Your submission code: bwb8e4b8ae3afecb32279a3941952049fff73d1181e93d77b45f39506c\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# run this cell to grade your work\n",
     "from bwsi_grader.python.relaxation_method import grader1 \n",
@@ -172,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "code_folding": []
    },
@@ -203,14 +223,37 @@
     "        List[float]\n",
     "            A list of the initial guess, and all of the subsequent guesses generated\n",
     "            by the relaxation method. \"\"\"\n",
-    "    # student code goes here\n"
+    "    \n",
+    "    rollout = [xo, func(xo), func(func(xo))]\n",
+    "    while max_it > len(rollout) and est(*rollout[-3:]) > tol:\n",
+    "        rollout.append(func(rollout[-1]))\n",
+    "    return rollout[:max_it]\n",
+    "\n",
+    "def est(x0, x1, x2):\n",
+    "        denom = 2 * x1 - x0 - x2\n",
+    "        if denom == 0:\n",
+    "            denom = 1e-14\n",
+    "        return abs((x1 - x2) ** 2 / denom)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding fixed-points for the function: f(x) = 2 - exp(-x)\n",
+      "\n",
+      "============================== ALL TESTS PASSED! ===============================\n",
+      "Your submission code: bw7ab135590053bf38cdb655fff9447e2553dfc315e04ed295c498190c\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# run this cell to grade your work\n",
     "from bwsi_grader.python.relaxation_method import grader2\n",
@@ -302,7 +345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -316,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
