--- a/pizza_shop/HW_pizza_shop.ipynb
+++ b/pizza_shop/HW_pizza_shop.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,12 +132,15 @@
     "    cost += cost * 0.0625\n",
     "    cost -= discount\n",
     "\n",
-    "    return round(cost, 2)"
+    "    return round(cost, 2)\n",
+    "\n",
+    "(x, y) =\n",
+    "x, y = coord()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,18 +167,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.12"
   }
  },
  "nbformat": 4,
