--- a/ciphers/HW_ciphers.ipynb
+++ b/ciphers/HW_ciphers.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -100,16 +100,32 @@
     "        str\n",
     "            The encoded string.\n",
     "       '''\n",
-    "    # student code goes here"
+    "    alphabet = \"abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ\"\n",
+    "    return \"\".join(\n",
+    "        alphabet[(alphabet.index(i) + shift_amt) % 52] if i in alphabet else i\n",
+    "        for i in string\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================== ALL TESTS PASSED! ===============================\n",
+      "Your submission code: bw824c23408b2b47d20ef3141bec8fe89430c3196f218f751889df1318\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from bwsi_grader.python.ciphers import grade_cesar_cipher\n",
     "grade_cesar_cipher(encode_caesar)"
@@ -203,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -225,16 +241,36 @@
     "        str\n",
     "            The encoded string.\n",
     "       '''\n",
-    "    # student code goes here"
+    "    alphabet = \"abcdefghijklmnopqrstuvwxyz\"\n",
+    "    string = string.lower()\n",
+    "    keyword = \"\".join(keyword.lower().split())\n",
+    "    from collections import OrderedDict\n",
+    "\n",
+    "    sub_alphabet = \"\".join(k for k in OrderedDict.fromkeys(keyword + alphabet))\n",
+    "    return \"\".join(\n",
+    "        sub_alphabet[alphabet.index(c)] if c in alphabet else c for c in string\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================== ALL TESTS PASSED! ===============================\n",
+      "Your submission code: bw63cdbf1d4638960582de493bc85c4108fd64b5cb161425b6781b1251\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from bwsi_grader.python.ciphers import grade_keyword_cipher\n",
     "grade_keyword_cipher(encode_keyword)"
@@ -243,7 +279,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -257,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
